# CI_homeworks

./: .gitignore  README.md  main.py  pyproject.toml
IPPy/nn/: __init__.py  diffusion.py  vae.py
hm1/: homework1.ipynb  homework1.py
hm2/: homework.py  homework2.ipynb
hm3/: homework3.ipynb  homework3.py
